--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "txn_lock"
-version = "0.5.1"
-authors = ["haydn@tinychain.net"]
+version = "0.6.0"
+authors = ["code@tinychain.net"]
 edition = "2021"
 description = "A futures-aware transactional read-write lock"
 license = "Apache-2.0"
