--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,12 @@ name = "txn_lock"
 version = "0.6.0"
 authors = ["code@tinychain.net"]
 edition = "2021"
-description = "A futures-aware transactional read-write lock"
+description = "Utilities to support transactional versioning"
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/haydnv/tinychain.git"
 
-keywords = ["transaction", "transactional", "lock", "version"]
+keywords = ["transaction", "transactional", "lock", "version", "versioning"]
 categories = ["concurrency", "data-structures"]
 
 [features]
