--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ categories = ["concurrency", "data-structures"]
 logging = ["log"]
 
 [dependencies]
+ds-ext = { path = "../ds-ext" }
 futures = "0.3"
 log = { version = "0.4", features = ["release_max_level_info"], optional = true }
 tokio = { version = "1.24", features = ["sync"] }
