--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,11 @@ logging = ["log"]
 
 [dependencies]
 collate = "0.3"
-ds-ext = { path = "../ds-ext" }
+ds-ext = "~0.1.1"
 hr-id = { version = "0.3", optional = true }
 futures = "0.3"
 log = { version = "0.4", features = ["release_max_level_info"], optional = true }
-tokio = { version = "1.29", features = ["sync"] }
+tokio = { version = "1.32", features = ["sync"] }
 
 [dev-dependencies]
 futures = "0.3"
