--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "txn_lock"
-version = "0.7.1"
+version = "0.8.0"
 authors = ["code@tinychain.net"]
 edition = "2021"
 description = "Utilities to support transactional versioning"
@@ -18,11 +18,11 @@ logging = ["log"]
 
 [dependencies]
 collate = "0.3"
-ds-ext = "~0.1.2"
-hr-id = { version = "0.3", optional = true }
+ds-ext = { path = "../ds-ext" }
+hr-id = { path = "../hr-id", optional = true }
 futures = "0.3"
 log = { version = "0.4", features = ["release_max_level_info"], optional = true }
-tokio = { version = "1.32", features = ["sync"] }
+tokio = { version = "1.33", features = ["sync"] }
 
 [dev-dependencies]
 futures = "0.3"
