--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,9 @@ id = ["hr-id"]
 logging = ["log"]
 
 [dependencies]
-collate = "0.3"
-ds-ext = { path = "../ds-ext" }
-hr-id = { path = "../hr-id", optional = true }
+collate = "0.4"
+ds-ext = "~0.1.3"
+hr-id = { version = "0.5", optional = true }
 futures = "0.3"
 log = { version = "0.4", features = ["release_max_level_info"], optional = true }
 tokio = { version = "1.33", features = ["sync"] }
