--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,11 @@ logging = ["log"]
 
 [dependencies]
 collate = "0.4"
-ds-ext = "~0.1.6"
+ds-ext = "~0.1.7"
 hr-id = { version = "0.5", optional = true }
 futures = "0.3"
 log = { version = "0.4", features = ["release_max_level_info"], optional = true }
-tokio = { version = "1.35", features = ["sync"] }
+tokio = { version = "1.35", features = ["sync", "rt"] }
 
 [dev-dependencies]
 futures = "0.3"
