--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ tokio = { version = "1.35", features = ["sync", "rt"] }
 
 [dev-dependencies]
 futures = "0.3"
+tokio = { version = "1.35", features = ["time"] }
