--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "txn_lock"
-version = "0.9.0"
+version = "0.10.0"
 authors = ["code@tinychain.net"]
 edition = "2021"
 description = "Utilities to support transactional versioning"
@@ -18,7 +18,7 @@ logging = ["log"]
 
 [dependencies]
 collate = "0.4"
-ds-ext = "~0.1.7"
+ds-ext = { path = "../ds-ext" }
 hr-id = { version = "0.5", optional = true }
 futures = "0.3"
 log = { version = "0.4", features = ["release_max_level_info"], optional = true }
@@ -26,4 +26,4 @@ tokio = { version = "1.35", features = ["sync", "rt"] }
 
 [dev-dependencies]
 futures = "0.3"
-tokio = { version = "1.35", features = ["time"] }
+tokio = { version = "1.36", features = ["time"] }
